fix: Make the footer stick to the bottom of the screen for desktop leaving no whitespace

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ footer {
 
 #footer-details {
     padding: 1.875em;
-    margin-top: 1.875em;
+    margin-top: 3.5625em;
 }
 .general-sub{
     font-family: "Epilogue", sans-serif;
@@ -243,7 +243,7 @@ footer {
         
    }
     .rick{
-        height:13.75em;
+        height: 13.75em;
     }
     .personal-info-text{
         margin-bottom: 30px;
